--- a/src/components/ErrorModal/ErrorModal.css
+++ b/src/components/ErrorModal/ErrorModal.css
@@ -4,38 +4,37 @@
     border-radius: 0.5rem;
     box-shadow: hsl(0 0% 0% / 10%) 0 0 0.5rem 0.25rem;
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
-.error-modal-dialog::backdrop {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .error-modal-dialog::backdrop {
     background: hsl(0 0% 0% / 50%);
-}
-
-.error-modal-message {
+  }
+  
+  .error-modal-message {
     padding-top: 25px;
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
     line-height: 23px;
     text-align: center;
-}
-
-.error-modal-message:not(:last-child) {
+  }
+  
+  .error-modal-message:not(:last-child) {
     margin-bottom: 1em;
-}
-
-.error-modal-button-container {
+  }
+  
+  .error-modal-button-container {
     margin-top: 1rem;
     margin-bottom: 1rem;
     gap: 0.5rem;
     display: flex;
     justify-content: center;
-}
-
-.error-modal-submit-btn {
+  }
+  
+  .error-modal-submit-btn {
     width: 7rem;
     height: 2.5rem;
     border: 1px solid #386AF6;
@@ -43,21 +42,22 @@
     border-radius: 25px;
     color: #FFFFFF;
     cursor: pointer;
-}
-
-.error-modal-submit-btn:hover {
+  }
+  
+  .error-modal-submit-btn:hover {
     background-color: #0056b3;
-}
-
-.error-modal-close-btn {
+  }
+  
+  .error-modal-close-btn {
     width: 7rem;
     height: 2.5rem;
     border: 1px solid #386AF6;
     border-radius: 25px;
     color: black;
     cursor: pointer;
-}
-
-.error-modal-close-btn:hover {
+  }
+  
+  .error-modal-close-btn:hover {
     background-color: #f8f9fa;
-}
+  }
+  
