--- a/src/components/Recording/Recording.css
+++ b/src/components/Recording/Recording.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30vh;
+    /* height: 30%; */
     max-height: 250px;
   }
   
