--- a/src/components/RetakeWarningPopup/RetakeWarningPopup.css
+++ b/src/components/RetakeWarningPopup/RetakeWarningPopup.css
@@ -1,20 +1,40 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; 
+}
+
+body, html {
+  height: 100%;
+  width: 100%;
+  font-family: Arial, sans-serif;
+  background-color: white;
+}
+
+.retakepopup-container {
+  height: 100%;
+  width: 100%;
+}
+
 .retakepopup-warning-popup {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: #333;
+  padding-top: 2vh;
   color: white;
 }
 
 .retakepopup-heading {
-  font-size: calc(1.2vh + 1.2vw);
+  font-size: 2rem;
+  margin-bottom: 2vh;
   color: white;
-  border-bottom: 1px solid #ECECEC;
-  padding-top: calc(1vh + 1vw);
-  padding-bottom: calc(0.8vh + 0.8vw);
   text-align: center;
+  padding-bottom: 1vh;
+  width: 100%;
+  border-bottom: 2px solid #ECECEC;
 }
 
 .retakepopup-content {
@@ -22,19 +42,18 @@
   flex-direction: column;
   justify-content: flex-end;
   height: 100%;
-  width: 100vw;
+  width: 100%;
 }
 
 .retakepopup-warning-container {
   background-color: #fff;
   color: black;
-  border-radius: 8px 8px 0 0;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: calc(1.5vh + 1.5vw);
-  height: 35%;
+  border-radius: 0.5rem 0.5rem 0 0; /* Rounded corners on top only */
+  padding: 1.5rem;
+
+  width: 100%; /* Adjusting width */
   display: flex;
   flex-direction: column;
-  width: 100vw;
   justify-content: space-between;
 }
 
@@ -42,25 +61,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: calc(1.5vh + 1.5vw);
+  margin-bottom: 1.5rem;
 }
 
 .retakepopup-warning-icon {
-  width: calc(1.5vh + 1.5vw);
-  height: calc(1.5vh + 1.5vw);
-  margin-right: calc(0.8vh + 0.8vw);
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
 }
 
 .retakepopup-warning-text {
-  height: calc(1.5vh + 1.5vw);
-  font-size: calc(1vh + 1vw);
+  font-size: 1.5rem;
   color: #0E0E0E;
 }
 
 .retakepopup-warning-message {
-  font-size: calc(1.2vh + 1.2vw);
+  font-size: 1.6rem; /* Decreased font size */
   text-align: center;
-  margin-bottom: calc(1.5vh + 1.5vw);
+  margin-bottom: 1.5rem;
 }
 
 .retakepopup-button-container {
@@ -72,17 +90,20 @@
 .retakepopup-confirm-button,
 .retakepopup-cancel-button-1,
 .retakepopup-confirm-button-1 {
-  padding: calc(0.8vh + 0.8vw) calc(1.5vh + 1.5vw);
-  font-size: calc(0.8vh + 0.8vw);
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
   border: none;
-  width: calc(8vh + 8vw);
-  border-radius: 8px;
+  width: 8rem;
+  border-radius: 0.5rem;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .retakepopup-cancel-button {
-  border: 2px solid black;
-  border-color: #386AF6;
+  border: 0.1rem solid #386AF6;
   background-color: white;
   color: #386AF6;
 }
@@ -99,19 +120,118 @@
 
 .retakepopup-confirm-button-1 {
   background-color: white;
-  border: 1px solid red;
+  border: 0.1rem solid red;
   color: #EB5757;
 }
 
 @media (max-width: 767px) {
-  .retakepopup-warning-container {
-    height: 30%; 
+  .retakepopup-heading {
+    font-size: 1.8rem;
   }
 
+  .retakepopup-warning-icon {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  .retakepopup-warning-text {
+    font-size: 1.2rem;
+  }
+
+  .retakepopup-warning-message {
+    font-size: 1.3rem; /* Decreased font size */
+  }
+
+  .retakepopup-cancel-button,
+  .retakepopup-confirm-button,
+  .retakepopup-cancel-button-1,
+  .retakepopup-confirm-button-1 {
+    padding: 0.8rem 1.5rem;
+    font-size: 1rem;
+    width: 8rem;
+  }
 }
 
-@media (max-width: 950px) {
-  .retakepopup-warning-container {
-    height: 30%;
+@media (min-width: 768px) and (max-width: 1024px) {
+  .retakepopup-heading {
+    font-size: 2.2rem;
+  }
+
+  .retakepopup-warning-icon {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+
+  .retakepopup-warning-text {
+    font-size: 1.5rem;
+  }
+
+  .retakepopup-warning-message {
+    font-size: 1.5rem; /* Decreased font size */
+  }
+
+  .retakepopup-cancel-button,
+  .retakepopup-confirm-button,
+  .retakepopup-cancel-button-1,
+  .retakepopup-confirm-button-1 {
+    padding: 1rem 2rem;
+    font-size: 1.3rem;
+    width: 10rem;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .retakepopup-heading {
+    font-size: 2.5rem;
+  }
+
+  .retakepopup-warning-icon {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .retakepopup-warning-text {
+    font-size: 1.7rem;
+  }
+
+  .retakepopup-warning-message {
+    font-size: 1.8rem; /* Decreased font size */
+  }
+
+  .retakepopup-cancel-button,
+  .retakepopup-confirm-button,
+  .retakepopup-cancel-button-1,
+  .retakepopup-confirm-button-1 {
+    padding: 1.2rem 2.5rem;
+    font-size: 1.5rem;
+    width: 11rem;
+  }
+}
+
+@media (min-width: 1201px) {
+  .retakepopup-heading {
+    font-size: 2.7rem;
+  }
+
+  .retakepopup-warning-icon {
+    width: 2.2rem;
+    height: 2.2rem;
+  }
+
+  .retakepopup-warning-text {
+    font-size: 1.8rem;
+  }
+
+  .retakepopup-warning-message {
+    font-size: 2rem; /* Decreased font size */
+  }
+
+  .retakepopup-cancel-button,
+  .retakepopup-confirm-button,
+  .retakepopup-cancel-button-1,
+  .retakepopup-confirm-button-1 {
+    padding: 1.5rem 3rem;
+    font-size: 1.7rem;
+    width: 12rem;
   }
 }
