--- a/src/pages/Instructions/Instructions.css
+++ b/src/pages/Instructions/Instructions.css
@@ -224,7 +224,7 @@ body, html {
     padding: 1.5vh 4vw;
     min-width: 10vw;
     min-height: 5vh;
-    max-height: 7vh;
+    max-height: 6vh;
     margin-bottom: 6vh;
   }
 }
